@@ -1536,17 +1536,6 @@ void test_PMINSB ( void )
    }
 }
 
-void test_PMINSD ( void )
-{
-   V128 src, dst;
-   Int i;
-   for (i = 0; i < 10; i++) {
-      randV128(&src);
-      randV128(&dst);
-      DO_mandr_r("pminsd", src, dst);
-   }
-}
-
 void test_PMINUD ( void )
 {
    V128 src, dst;
